# my-weather-indicator

./: .gitconfig  .gitignore  .justfile  AUTHORS  Dockerfile  LICENSE  README  README.md  create.sh  extras-my-weather-indicator.desktop.in  helper_python.sh  msgfmt.py  mybuilder.sh  pyproject.toml  setup.py  test.txt
.github/workflows/: autoassign.yml  bump-version.yml  publish.yml
data/: extras-my-weather-indicator.desktop  my-weather-indicator-autostart.desktop  my-weather-indicator.desktop  spain-data.db  style.css
debian/: changelog  control  copyright  files  install  rules
po/: ar.po  be.po  ber.po  bg.po  ca.po  ca@valencia.po  cs.po  de.po  el.po  en.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  languages.txt  lt.po  lv.po  ml.po  ms.po  nl.po  pl.po  po.pot  pt.po  pt_BR.po  ro.po  ru.po  si.po  (+12 more)
src/: .env.json  README.md  aemetapi.py  async.py  asyncf.py  basedialog.py  check_connection.py  common_functions.py  comun.py  conditions.py  configurator.py  forecastw.py  geocodeapi.py  geolocation.py  graph.html  graph.py  ipaddress.py  logindialog.py  machine_information.py  mipaddress.py  moon.py  mooncalendarwindow.py  moondaywidget.py  myweatherindicator.py  networkmanayer.py  openweathermap.html  openweathermap.py  preferences.py  sun.py  utils.py  weatherservice.py  weatherwidget.py  wgoogleapi.py  whereami.html  whereami.py  wnoaaapi.py  wopenmeteoapi.py  wopenweathermapapi.py  worldweatheronlineapi.py  wundergroundapi.py  (+1 more)
src/forecast/: forecast.html  scripts.js  (+1 more)
(+19 files in other folders)
