[project]
name = "my-weather-indicator"
version = "0.10.19"
description = "Add your description here"
authors = [
    { name = "Lorenzo Carbonell <atareao@atareao.es", email = "lorenzo.carbonell.cerezo@gmail.com" }
]
dependencies = [
    "pytz>=2024.1",
    "pygobject>=3.48.2",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_weather_indicator"]
